# mask-pii

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  PUBLISH.md  PUBLISH_ROADMAP.md  Package.swift  README.md  TEST_CASES.md  composer.json
awk/: README.md  awk-pkg.json
awk/src/: mask_pii.awk
awk/tests/: test_mask_pii.awk
bash/: README.md  mask_pii.sh  package.json
bash/tests/: test_mask_pii.sh
bun/: README.md  package.json  tsconfig.json
bun/src/: index.ts
bun/test/: maskpii.test.ts
carbon/: Carbon.toml  LICENSE.md  README.md
carbon/src/: mask_pii.carbon
carbon/tests/: mask_pii_test.carbon
common-lisp/: README.md  mask-pii.asd
common-lisp/src/: mask-pii.lisp
common-lisp/tests/: mask-pii-tests.lisp
crystal/: README.md  shard.yml
crystal/spec/: mask_pii_spec.cr
crystal/src/: mask_pii.cr
d/: .gitignore  README.md  dub.json
d/source/: mask_pii.d
deno/: README.md  deno.json  mod.ts
deno/tests/: mask_pii_test.ts
elixir/: README.md  mix.exs
elixir/doc/: .build  .build.epub  .build.markdown  404.html  MaskPII.Masker.html  MaskPII.Masker.md  MaskPII.html  MaskPII.md  api-reference.html  api-reference.md  index.html  llms.txt  mask_pii.epub  search.html
elixir/lib/: mask_pii.ex
elixir/test/: mask_pii_masker_test.exs
example/awk/: README.md  mask_pii_example.awk
example/bash/: README.md
example/bun/: index.ts
example/carbon/: main.carbon
example/common-lisp/: main.lisp
example/crystal/: main.cr
example/d/: main.d
example/deno/: main.ts
example/elixir/: example.exs
example/fish/: main.fish
example/groovy/: main.groovy
example/hare/: main.ha
example/haskell/: main.hs
example/javascript/: main.js
example/julia/: main.jl
example/lua/: main.lua
example/nim/: main.nim
example/nushell/: example.nu
example/ocaml/: main.ml
example/odin/: main.odin
example/perl/: main.pl
example/pony/: main.pony
example/powershell/: main.ps1
example/r/: example.R
example/racket/: main.rkt
example/red/: main.red
example/swift/: main.swift
example/tcl/: main.tcl
example/v/: README.md  main.v
example/zig/: main.zig
example/zsh/: main.zsh
fish/: README.md
fish/functions/: mask_pii.fish
fish/tests/: run.fish
go/: README.md  go.mod  maskpii.go  maskpii_test.go  version.go
groovy/: README.md  build.gradle  settings.gradle
hare/: README.md
hare/maskpii/: README  maskpii.ha  maskpii_test.ha
haskell/: .gitignore  CHANGELOG.md  README.md  mask-pii.cabal
haskell/src/: MaskPII.hs
haskell/test/: Spec.hs
javascript/: README.md  package.json
javascript/src/: index.js
javascript/test/: masker.test.js
julia/: Manifest.toml  Project.toml  README.md
julia/src/: MaskPII.jl
julia/test/: runtests.jl
lua/: README.md  mask-pii-0.2.0-1.rockspec
lua/tests/: test_mask_pii.lua
nim/: README.md  mask_pii.nimble
nim/src/: mask_pii.nim
nim/tests/: test_mask_pii.nim
nushell/: README.md
nushell/src/: mask_pii.nu
nushell/tests/: test_mask_pii.nu
ocaml/: README.md  dune-project  mask-pii.opam
ocaml/src/: dune  mask_pii.ml  mask_pii.mli
ocaml/test/: dune  test_mask_pii.ml
odin/: README.md
odin/mask_pii/: mask_pii.odin  (+1 more)
perl/: .gitignore  MANIFEST  Makefile.PL  README.md
php/: .phpunit.result.cache  README.md  composer.json  phpunit.xml
pony/: README.md
powershell/: README.md
python/: README.md  pyproject.toml
python/src/mask_pii/: __init__.py  masker.py
python/tests/: test_mask_pii.py
r/: DESCRIPTION  NAMESPACE  README.md
racket/: README.md  info.rkt
red/: README.md  mask-pii.red
ruby/: README.md  mask-pii-0.2.0.gem  mask-pii.gemspec
rust/: Cargo.toml  README.md
rust/src/: lib.rs
src/: lib.rs
swift/: Package.swift  README.md
tcl/: README.md  pkgIndex.tcl  teapot.txt
v/: README.md  mask_pii.v  mask_pii_test.v  v.mod
zig/: README.md  build.zig  build.zig.zon
zsh/: README.md  mask-pii.plugin.zsh
(+31 files in other folders)
